FIX, page overflowing in mobile

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,7 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
+html,
+body {
   overflow-y: auto;
   overflow-x: hidden !important;
   max-width: 100vw;
@@ -17,6 +18,6 @@ body {
   @apply bg-[#F8F9FA];
 }
 
-.flex-center{
-    @apply flex justify-center items-center
+.flex-center {
+  @apply flex justify-center items-center
 }
